--- a/package.json
+++ b/package.json
@@ -9,31 +9,36 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "googleapis": "^148.0.0",
+    "lucide-react": "^0.468.0",
     "next": "15.5.0",
+    "nodemailer": "^6.9.16",
+    "openai": "^4.67.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "openai": "^4.67.3",
-    "twilio": "^5.3.7",
     "stripe": "^18.4.0",
-    "googleapis": "^148.0.0",
-    "nodemailer": "^6.9.16",
-    "lucide-react": "^0.468.0",
-    "zod": "^3.25.0",
-    "uuid": "^11.0.3"
+    "tailwind-merge": "^3.3.1",
+    "twilio": "^5.3.7",
+    "uuid": "^11.0.3",
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/nodemailer": "^6.4.19",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
