--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^148.0.0",
     "lucide-react": "^0.468.0",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.16",
     "openai": "^4.67.3",
     "react": "19.1.0",
