--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.2.0",
     "resend": "^6.0.1",
     "sharp": "^0.34.3",
     "sonner": "^2.0.7",
