--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query-devtools": "^5.87.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "googleapis": "^148.0.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.468.0",
