--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
+    "framer-motion": "^12.23.13",
     "googleapis": "^148.0.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.468.0",
