--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "npm install --include=optional sharp"
+    "lint": "eslint"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
