--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/render": "^1.2.3",
+    "@stripe/stripe-js": "^7.9.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.4",
@@ -44,7 +45,7 @@
     "recharts": "^3.2.0",
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
-    "stripe": "^18.4.0",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.8.0",
     "uuid": "^11.0.3",
