--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query-devtools": "^5.87.4",
     "@upstash/redis": "^1.35.3",
     "@vercel/analytics": "^1.5.0",
+    "@wisp-cms/client": "^0.0.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
